--- a/group2/src/Makefile
+++ b/group2/src/Makefile
@@ -12,5 +12,9 @@ opendlv_standard_message_set_v0_9_6.proto: opendlv-standard-message-set-v0.9.6.o
 opendlv_standard_message_set_v0_9_6_pb2.py: opendlv_standard_message_set_v0_9_6.proto
 	protoc --python_out=. opendlv_standard_message_set_v0_9_6.proto
 
+docker:
+	docker build -t myapp -f Dockerfile.armhf .
+	docker save myapp > myapp.tar
+	
 clean:
 	rm -f *_pb2.py *pyc *.proto 
